--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <main class="container">
     <section class="about">
       <div class="about-header {{condensed_class}}">
-<!--       custom -->
+<!--       custom part start -->
       <br>
       <br>
       <br>
@@ -25,7 +25,7 @@
       <br>
       <br>
       <br>
-<!--       custom -->
+<!--       custom part end -->
       <div class="about-title">
       <a href="{{ "/" | relative_url}}">
         {% if site.plainwhite.portfolio_image_dark and site.plainwhite.dark_mode %}
